--- a/pages/omega1-1.html
+++ b/pages/omega1-1.html
@@ -8,9 +8,12 @@
     <title>Marked Territory</title>
   </head>
   <body>
-    <audio src="../imgs/mp3.mp3" autoplay loop></audio>
+    <audio src="../imgs/mp3.mp3" autoplay loop hidden></audio>
     <section class="cont">
-        <video src="../imgs/omega1-1.m4v" muted autoplay loop></video>
+      <a href="../index.html" class="back"></a>
+      <a href="#" onclick="autoPlay()" class="play"></a>
+      <video src="../imgs/omega1-1.m4v" muted autoplay loop></video>
     </section>
+    <script src="../index.js"></script>
   </body>
 </html>
