--- a/pages/Architecture.html
+++ b/pages/Architecture.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css" />
     <title>Marked Territory</title>
   </head>
   <body>
-    <audio src="../imgs/mp3.mp3" autoplay loop></audio>
+    <audio src="../imgs/mp3.mp3" autoplay loop hidden></audio>
     <section class="cont">
-        <video src="../imgs/Architecture.m4v" muted autoplay loop></video>
+      <a href="../index.html" class="back"></a>
+      <a href="#" onclick="autoPlay()" class="play"></a>
+      <video src="../imgs/Architecture.m4v" muted autoplay loop></video>
     </section>
+    <script src="../index.js"></script>
   </body>
 </html>
