--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Marked Territory</title>
   </head>
   <body>
-      <audio src="./imgs/mp3.mp3" autoplay loop></audio>
+      <audio src="./imgs/mp3.mp3" hidden autoplay loop></audio>
     </audio>
     <section class="cont">
         <video src="./imgs/bg.m4v" muted autoplay loop></video>
         <div class="href">
+            <a href="#" onclick="autoPlay()" class="play"></a>
             <a id="alpha-1" href="./pages/alpha-1.html"></a>
             <a id="alpha-2" href="./pages/alpha-1.html"></a>
             <a id="omega1-1" href="./pages/omega1-1.html"></a>
@@ -23,5 +24,6 @@
             <a id="scenery-vr" href="./pages/scenery-vr.html"></a>
         </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
