--- a/pages/heart.html
+++ b/pages/heart.html
@@ -10,7 +10,7 @@
   <body>
     <audio src="../imgs/mp3.mp3" autoplay loop hidden></audio>
     <section class="cont">
-      <a href="../index.html" class="back"></a>
+      <a href="../home.html" class="back"></a>
       <a href="#" onclick="autoPlay()" class="play"></a>
       <video src="../imgs/heart.m4v" muted autoplay loop></video>
     </section>
