--- a/index.html
+++ b/index.html
@@ -9,21 +9,11 @@
   </head>
   <body>
       <audio src="./imgs/mp3.mp3" hidden autoplay loop></audio>
-    </audio>
-    <section class="cont">
-        <video src="./imgs/bg.m4v" muted autoplay loop></video>
-        <div class="href">
-            <a href="#" onclick="autoPlay()" class="play"></a>
-            <a id="alpha-1" href="./pages/alpha-1.html"></a>
-            <a id="alpha-2" href="./pages/alpha-1.html"></a>
-            <a id="omega1-1" href="./pages/omega1-1.html"></a>
-            <a id="omega2-1" href="./pages/omega2-1.html"></a>
-            <a id="Architecture" href="./pages/Architecture.html"></a>
-            <a id="heart" href="./pages/heart.html"></a>
-            <a id="build-vr" href="./pages/build-vr.html"></a>
-            <a id="scenery-vr" href="./pages/scenery-vr.html"></a>
-        </div>
-    </section>
+      <section class="cont">
+          <video src="./imgs/bg1.m4v" muted autoplay loop></video>
+          <a href="#" onclick="autoPlay()" class="play"></a>
+        <a class="href" href="./home.html"></div>
+      </section>
     <script src="index.js"></script>
   </body>
 </html>
