--- a/pages/build-vr.html
+++ b/pages/build-vr.html
@@ -12,7 +12,7 @@
     <section class="cont">
       <a href="../home.html" class="back"></a>
       <a href="#" onclick="autoPlay()" class="play"></a>
-      <video src="../imgs/build-vr.m4v" muted autoplay loop></video>
+      <video src="../imgs/build-vr.mp4" muted autoplay loop></video>
     </section>
     <script src="../index.js"></script>
   </body>
